<resources>
    <string name="app_name">ShoeStore</string>

    <!--    Fragment Login/Signup-->
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="email_field_hint">Email</string>
    <string name="field_password_hint">password</string>
    <string name="button_login_label">login</string>
    <string name="button_signup_label">signup</string>

    <!--    Fragment Welcome-->
    <string name="welcome_text">Welcome to Shoe store</string>
    <string name="navigation_to_instructions_text">Please proceed to instructions</string>
    <string name="button_instructions_label">Instructions</string>

    <!--    Fragment Instructions-->
    <string name="instructions_text1">The Main Screen is for List of Shoes</string>
    <string name="instructions_text2">You can add more shoes by pressing the button \"Add Shoe\"</string>
    <string name="button_shoe_store_label">Proceed</string>
    <string name="fab_content_description">Add shoe to shoe store</string>
    <string name="title_logout">Log out</string>

    <string name="shoe_name_hint">Shoe name</string>
    <string name="company_hint">Company</string>
    <string name="shoe_size_hint">42</string>
    <string name="description_hint">Description</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="text_label_shoe_name">Shoe Name</string>
    <string name="text_label_company_name">Company name</string>
    <string name="text_label_shoe_size">Shoe size</string>
    <string name="text_label_description">Description</string>

    <string name="shoe_name">Shoe Name: %1$s</string>
    <string name="company">Company: %1$s</string>
    <string name="size">Size: %1$.0f</string>
    <string name="description">Description: %1$s</string>
    <string name="images">Images: %1$s</string>
    <string name="no_data_available">Store is empty , Please add some Shoes</string>
</resources>
